<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".detailticket.view.detailTicket">

    <TextView
        android:id="@+id/tv_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/tv_estado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Todo"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/tv_titulo"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/tv_folio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/numTicket"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/tv_estado"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <TextView
        android:id="@+id/tv_fecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fecha"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/tv_folio"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/tv_NombreLevanta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/tv_fecha"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/tv_NombreEquipoResponsable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/tv_NombreLevanta"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/tv_tipoIncidencia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tipo"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/tv_NombreEquipoResponsable"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/tv_gravedadIncidencia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gravedad"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/tv_tipoIncidencia"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/tv_versionFalla"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/versionNumber"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/tv_gravedadIncidencia"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/tv_descripcionFal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descripcion"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/tv_versionFalla"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <Button
        android:id="@+id/btn_Doing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="3dp"
        android:text="@string/stateDoing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn_Done"/>

    <Button
        android:id="@+id/btn_Done"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="3dp"
        android:text="@string/stateDone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/btn_Doing"
        app:layout_constraintRight_toLeftOf="@id/btn_Archivar"/>

    <Button
        android:id="@+id/btn_Archivar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="3dp"
        android:text="@string/archivar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/btn_Done"
        />




</androidx.constraintlayout.widget.ConstraintLayout>